Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29926

QSyle draw VLine shaped frame on incorrect position

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.0.2
    • 5.0.1
    • GUI: Look'n'Feel
    • None
    • any (mac OS X, Windows 7, Linux)
    • qtbase/stable: 55cf7c577da015bd6d48a034902477b83cf73be7

    Description

      In qcommonstyle.cpp at lines 2271 - 2272 we have
      p1 = QPoint(opt->rect.x()+opt->rect.width() / 2, 0);
      p2 = QPoint(p1.x(), opt->rect.height());
      must be:
      p1 = QPoint(opt->rect.x()+opt->rect.width() / 2, opt->rect.y());
      p2 = QPoint(p1.x(), p1.y()+opt->rect.height());
      Improve it please in next release please!

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            mskmsk_1985 Mihail
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes