Fix QCommonStyle::drawControl(CE_ShapedFrame) for QFrame::H/VLine

Respect QStyleOption::rect, do not expect Y to be 0.

Task-number: QTBUG-29926
Change-Id: I6304d20f629f89774c897d2c81c2c7816dff4718
Reviewed-by: Jens Bache-Wiig <jens.bache-wiig@digia.com>