src/widgets/styles/qcommonstyle.cpp
@@ -2265,11 +2265,11 @@ void QCommonStyle::drawControl(ControlElement element, const QStyleOption *opt,
             case QFrame::VLine: {
                 QPoint p1, p2;
                 if (frameShape == QFrame::HLine) {
-                    p1 = QPoint(opt->rect.x(), opt->rect.height() / 2);
+                    p1 = QPoint(opt->rect.x(), opt->rect.y() + opt->rect.height() / 2);
                     p2 = QPoint(opt->rect.x() + opt->rect.width(), p1.y());
                 } else {
-                    p1 = QPoint(opt->rect.x()+opt->rect.width() / 2, 0);
-                    p2 = QPoint(p1.x(), opt->rect.height());
+                    p1 = QPoint(opt->rect.x() + opt->rect.width() / 2, opt->rect.y());
+                    p2 = QPoint(p1.x(), p1.y() + opt->rect.height());
                 }
                 if (frameShadow == QFrame::Plain) {
                     QPen oldPen = p->pen();
